add leading per line

--- a/index.html
+++ b/index.html
@@ -16,25 +16,35 @@
 </head>
 <body>
 
-  <div class="block" type="textflow" align="center" vertical-align="bottom">
+  <!-- <div class="block" type="textflow" align="center" vertical-align="bottom">
 
     <div class="container">
-      <p class="title" leading="10" font-size="60" fontname="Herculanum">Thee</p>
-      <p class="subtitle" leading="10" font-size="30" fontname="Courier New">Simon Levelt</p>
+      <p class="title" leading="70" font-size="60" fontname="Herculanum">Thee</p>
+      <p class="subtitle" leading="50" font-size="30" fontname="Courier New">Simon Levelt</p>
     </div>
 
-  </div>
+  </div> -->
 
 
   <div class="block" type="textflow" align="left" vertical-align="bottom">
 
     <div class="container">
-      <p class="title" contenteditable="true" leading="10" font-size="60" fontname="Herculanum">Thaise woksauzen</p>
-      <p class="subtitle" contenteditable="true" leading="10" font-size="30" fontname="Courier New">St. Hendrick</p>
+      <p class="title" contenteditable="true" leading="70" font-size="60" fontname="Herculanum">Thaise woksauzen</p>
+      <p class="subtitle" contenteditable="true" leading="40" font-size="30" fontname="Courier New">St. Hendrick</p>
     </div>
 
   </div>
 
+
+
+  <!-- <div class="block" type="textflow" contenteditable="true" align="left" vertical-align="bottom">
+
+    <div class="container">
+      <p class="title" leading="70" font-size="60" fontname="Herculanum">Thaise woksauzen</p>
+      <p class="subtitle" leading="40" font-size="30" fontname="Courier New">St. Hendrick</p>
+    </div>
+
+  </div> -->
 
 
 </body>
