--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 
   </div>
 
+<button class="output">Output</button>
+<div id="output">
 
+</div>
 
   <!-- <div class="block" type="textflow" contenteditable="true" align="left" vertical-align="bottom">
 
