--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="block" type="textflow" align="left" vertical-align="bottom">
 
     <div class="container">
-      <p class="title" contenteditable="true" leading="70" font-size="60" fontname="Herculanum">Thaise woksauzen</p>
+      <p class="title" contenteditable="true" leading="70" font-size="60" fontname="Herculanum">Thaise woksauzen regelextra</p>
       <p class="subtitle" contenteditable="true" leading="40" font-size="30" fontname="Courier New">St. Hendrick</p>
     </div>
 
