format input and nextline format

--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
   </div> -->
 
 
+  <div id="block2" class="block" type="textflow" align="left" vertical-align="top">
+    <div class="container"></div>
+  </div>
+
   <div class="block" type="textflow" align="left" vertical-align="bottom">
 
     <div class="container">
-      <p class="title" contenteditable="true" leading="70" font-size="60" fontname="Herculanum">Tha.is e<br />woksauzen</p>
-      <p class="subtitle" contenteditable="true" leading="40" font-size="30" fontname="Courier New">St. Hendrick</p>
+      <p class="title" contenteditable="true" leading="70" fontsize="60" fontname="Herculanum">Thaise woksauzen<br></p>
+      <p class="subtitle" contenteditable="true" leading="40" fontsize="30" fontname="Courier New">St. Hendrick</p>
     </div>
 
   </div>
 
-<button class="output">Output</button>
+<!-- <button class="output">Output</button>
 <div id="output">
 
-</div>
+</div> -->
 
   <!-- <div class="block" type="textflow" contenteditable="true" align="left" vertical-align="bottom">
 
@@ -54,6 +58,7 @@
 <script>
 $(document).ready(function() {
 
+  // var string = '<font fontname="AmaticSC-bold" fontsize="150" leading="112" fillcolor="{ cmyk 0,0,0,1 }" >Honing</font><font fontname="AmericanTypewriter" fontsize="24" leading="30" fillcolor="30" ><nextline />in knijpfles bijvoorbeeld:</font>';
 
 });
 </script>
