--- a/index.html
+++ b/index.html
@@ -26,32 +26,22 @@
   </div> -->
 
 
-  <div id="block2" class="block" type="textflow" align="left" vertical-align="top">
+  <div id="block2" class="block" type="textflow" alignment="left" vertical-align="top">
     <div class="container"></div>
   </div>
 
-  <div class="block" type="textflow" align="left" vertical-align="bottom">
+  <div class="block" type="textflow" vertical-align="bottom">
 
     <div class="container">
-      <p class="title" contenteditable="true" leading="70" fontsize="60" fontname="Herculanum">Thaise woksauzen<br></p>
-      <p class="subtitle" contenteditable="true" leading="40" fontsize="30" fontname="Courier New">St. Hendrick</p>
+      <font class="title" contenteditable="true" alignment="left" leading="70" fontsize="60" fontname="Herculanum">Thaise woksauzen<br></font>
+      <font class="subtitle" contenteditable="true" alignment="" leading="40" fontsize="30" fontname="Courier New">St. Hendrick</font>
     </div>
 
   </div>
 
-<!-- <button class="output">Output</button>
-<div id="output">
 
-</div> -->
 
-  <!-- <div class="block" type="textflow" contenteditable="true" align="left" vertical-align="bottom">
-
-    <div class="container">
-      <p class="title" leading="70" font-size="60" fontname="Herculanum">Thaise woksauzen</p>
-      <p class="subtitle" leading="40" font-size="30" fontname="Courier New">St. Hendrick</p>
-    </div>
-
-  </div> -->
+<button class="output">Output</button>
 
 
 </body>
