add tabflow input format and output format

--- a/index.html
+++ b/index.html
@@ -16,17 +16,8 @@
 </head>
 <body>
 
-  <!-- <div class="block" type="textflow" align="center" vertical-align="bottom">
 
-    <div class="container">
-      <p class="title" leading="70" font-size="60" fontname="Herculanum">Thee</p>
-      <p class="subtitle" leading="50" font-size="30" fontname="Courier New">Simon Levelt</p>
-    </div>
-
-  </div> -->
-
-
-  <div id="block2" class="block" type="textflow" alignment="left" vertical-align="top">
+  <!-- <div id="block2" class="block" type="textflow" alignment="left" vertical-align="top">
     <div class="container"></div>
   </div>
 
@@ -37,11 +28,42 @@
       <font class="subtitle" contenteditable="true" alignment="" leading="40" fontsize="30" fontname="Courier New">St. Hendrick</font>
     </div>
 
+  </div> -->
+
+
+  <div id="block3" class="block" type="tabflow" contenteditable="true" vertical-align="top">
+    <div class="container"></div>
   </div>
+
+
+  <!-- <div class="block" type="tabflow" vertical-align="bottom">
+
+    <div class="container">
+
+      <div class="tabs-row">
+
+        <div class="tabs-tab" alignment="left">
+          <font contenteditable="true" leading="24" fontsize="20" fontname="Courier New">Tofu</font>
+        </div>
+
+        <div class="tabs-tab" alignment="center">
+          <font contenteditable="true" leading="24" fontsize="20" fontname="Courier New">250 g</font>
+        </div>
+
+        <div class="tabs-tab" alignment="left">
+          <font contenteditable="true" leading="36" fontsize="28" fontname="Courier New">1,99</font>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div> -->
 
 
 
 <button class="output">Output</button>
+<button class="taboutput">Tab output</button>
 
 
 </body>
