add prijs block

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <body>
 
 
+  <div id="block2" class="block" type="textflow" alignment="left" vertical-align="top">
+    <div class="container"></div>
+  </div>
+
   <!-- <div id="block2" class="block" type="textflow" alignment="left" vertical-align="top">
     <div class="container"></div>
   </div>
@@ -33,6 +37,15 @@
 
   <div id="block3" class="block" type="tabflow" contenteditable="true" vertical-align="top">
     <div class="container"></div>
+  </div>
+
+
+  <div id="block4" class="block" type="prijs" vertical-align="bottom">
+    <div class="container">
+      <font contenteditable="true" alignment="right" leading="70" fontsize="60" fontname="VeneerW01-Two">
+        1.<span>29</span>
+      </font>
+    </div>
   </div>
 
 
