--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
 
   <div id="block4" class="block" type="prijs" vertical-align="bottom">
     <div class="container">
-      <font contenteditable="true" alignment="right" leading="70" fontsize="60" fontname="VeneerW01-Two">
-        1.<span>29</span>
+      <font fontname="VeneerW01-Two" alignment="right" fontsize="160" leading="180" fillcolor="{ cmyk 0,0,0,1 }" >
+        <prijs>1</prijs>
+        <prijs charspacing=-9%>.</prijs>
+        <prijs fontsize=75% textrise=47% charspacing=0>29</prijs>
       </font>
+
+      <!-- <font contenteditable="true" alignment="right" leading="70" fontsize="60" fontname="VeneerW01-Two">1.<span class='small'>29</span>
+      </font> -->
     </div>
   </div>
 
