grote prijs output

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
 <button class="output">Output</button>
 <button class="taboutput">Tab output</button>
+<button class="prijsoutput">Prijs output</button>
 
 
 </body>
