price fix select all bug

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
 
-  <div id="block4" class="block" type="prijs" vertical-align="bottom">
+  <div id="block4" class="block" type="price" vertical-align="bottom">
     <div class="container"></div>
   </div>
 
